--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body>
     <h1>Task Timeline!</h1>
-    <p id="date"></p>
+    <p id="date">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora modi, pariatur doloribus minima quisquam repellendus quos amet sed voluptates similique porro veniam vitae nisi aliquam quasi architecto eos beatae. Consequatur.
+    </p>
     <ul>
         <li class="list">Edit the head</li>
         <li class="list">Edit the body</li>
@@ -20,7 +22,4 @@
 </body>
 
 </html>
-
-
-
-çlç,ç~,ç
+<!-- This is an HTML comment. -->
